Fixing background image scaling on mobile

--- a/css/mobilePortraitStyle.css
+++ b/css/mobilePortraitStyle.css
@@ -23,9 +23,6 @@
 }
 
 #background1{
-    background-position: -100vw 0vh;
-    -webkit-transition: all 1s ease 0s;
-    transition: all 1s ease 0s;
     background-attachment: scroll;
 }
   
